@@ -32,7 +32,8 @@
         </li>
         <li>[Feature] Added QuickLook button to toolbar configuration</li>
         <li>[Feature] Display Favicon for Web URL if available in bookmark window</li>
-        <li>[Bugfix] Uploads fail with digest access authentication [<a href="http://trac.cyberduck.ch/ticket/2268">#2268</a>]
+        <li>[Feature] NTLM Authentication (WebDAV) [<a href="http://trac.cyberduck.ch/ticket/2835">#2835</a>]</li>
+        <li>[Bugfix] Uploads fail with digest access authentication (WebDAV) [<a href="http://trac.cyberduck.ch/ticket/2268">#2268</a>]
         </li>
         <li>[Bugfix] Manually sorting bookmarks using drag and drop works for the entire row [<a
                 href="http://trac.cyberduck.ch/ticket/2571">#2571</a>]
